--- a/nginx.conf
+++ b/nginx.conf
@@ -12,5 +12,8 @@ server {
 
     location / {
         try_files $uri /index.html;
+
+        basic_auth "Restricted Content";
+        basic_auth_user_file /etc/nginx/.htpasswd;
     }
 }
